--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,7 +57,7 @@ h2 {
   width: 100%;
   height: 38vmin;
   margin-top: 3%;
-  margin-bottom: 150px;
+  margin-bottom: 50px;
 }
 
 .extra-info-coffee {
@@ -86,14 +86,14 @@ h2 {
 h3 {
   margin-top: 4%;
   margin-bottom: 4%;
-  margin-left: 20px;
+  margin-left: 4%;
   font-size: 4vmin;
 }
 
 .extra-info-coffee input[type="radio"],
 .extra-info-bb input[type="checkbox"] {
-  width: 2.5em;
-  height: 2.5em;
+  width: 1em;
+  height: 1em;
   margin-left: 2%;
 }
 
@@ -179,9 +179,10 @@ textarea {
 
 .image-container {
   display: flex;
-  width: 350px;
-  height: 350px;
+  width: 125px;
+  height: 125px;
   margin-top: 1%;
+  margin: 1%;
   border-radius: 50%;
   position: relative;
   box-sizing: border-box;
@@ -498,5 +499,5 @@ p {
 
 .last-one,
 .last-two {
-  margin-bottom: 400px;
+  margin-bottom: 150px;
 }
