--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -179,8 +179,8 @@ textarea {
 
 .image-container {
   display: flex;
-  width: 125px;
-  height: 125px;
+  width: 35vmin;
+  height: 35vmin;
   margin-top: 1%;
   margin: 1%;
   border-radius: 50%;
@@ -199,7 +199,7 @@ img {
   flex-direction: column;
   align-content: center;
   position: relative;
-  width: 10%;
+  width: 15%;
   height: 100%;
 }
 
@@ -245,12 +245,14 @@ img {
 .item-name-container {
   display: flex;
   align-items: center;
+  /* justify-content: center; */
   width: 100%;
   height: 50%;
 }
 
 .item-name {
   font-size: 4.5vmin;
+  /* text-align: center; */
 }
 
 .quantity-counter {
@@ -303,7 +305,7 @@ img {
 .food-button {
   width: 40%;
   padding: 3%;
-  font-size: 2vmax;
+  font-size: 4vmin;
   border-bottom-left-radius: 20% 60%;
   color: white;
   background-color: black;
@@ -312,7 +314,7 @@ img {
 .drink-button {
   width: 40%;
   padding: 3%;
-  font-size: 2vmax;
+  font-size: 4vmin;
   border-bottom-right-radius: 20% 60%;
   color: #c0c0c0;
   background-color: white;
